basic layout finished

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
     <body>
         <div class='header-container'>
-            <h1>gormlessfie's collection of notes</h1>
+            <h1><a href='index.html'>gormlessfie's collection of notes</a></h1>
 
             <div class='right-side-container'>
                 <div class='theme-box'>
@@ -30,15 +30,17 @@
 
         <div class='base-container'>
             <div class='nav-bar-container'>
-                <ul>
                     <div class='nav-content-boxes box-one'>
-                        <li><a href='notes-collection/terminal-notes/git-notes.html'>Placeholder text</a></li>
+                        <a href='notes-collection/terminal-notes/git-notes.html'>Terminal Notes</a></li>
                     </div>
                     <div class='nav-content-boxes box-two'>
-                        <li><a href='notes-collection/terminal-notes/git-notes.html'>Placeholder text</a></li>
+                        <a href='notes-collection/terminal-notes/git-notes.html'>HTML Notes</a></li>
                     </div>
                     <div class='nav-content-boxes box-three'>
-                        <li><a href='notes-collection/terminal-notes/git-notes.html'>Placeholder text</a></li>
+                        <a href='notes-collection/terminal-notes/git-notes.html'>CSS Notes</a></li>
+                    </div>
+                    <div class='nav-content-boxes box-four'>
+                        <a href='notes-collection/terminal-notes/git-notes.html'> Javascript Notes</a></li>
                     </div>
                 </ul>
             </div>
@@ -47,48 +49,33 @@
                 <div class='card-container'>
                     <img class="card-img" src='img/Octocat.png' alt='Picture of title'>
                     <div class='card-title'>
-                        <h3>Name of the card</h3>
+                        <h3>Terminal Notes</h3>
                     </div>
                 </div>
 
                 <div class='card-container'>
                     <img class="card-img" src='img/Octocat.png' alt='Picture of title'>
                     <div class='card-title'>
-                        <h3>Name of the card</h3>
+                        <h3>HTML Notes</h3>
                     </div>
                 </div>
 
                 <div class='card-container'>
                     <img class="card-img" src='img/Octocat.png' alt='Picture of title'>
                     <div class='card-title'>
-                        <h3>Name of the card</h3>
+                        <h3>CSS Notes</h3>
                     </div>
                 </div>
 
                 <div class='card-container'>
                     <img class="card-img" src='img/Octocat.png' alt='Picture of title'>
                     <div class='card-title'>
-                        <h3>Name of the card</h3>
-                    </div>
-                </div>
-
-                <div class='card-container'>
-                    <img class="card-img" src='img/Octocat.png' alt='Picture of title'>
-                    <div class='card-title'>
-                        <h3>Name of the card</h3>
-                    </div>
-                </div>
-
-                <div class='card-container'>
-                    <img class="card-img" src='img/Octocat.png' alt='Picture of title'>
-                    <div class='card-title'>
-                        <h3>Name of the card</h3>
+                        <h3>Javascript Notes</h3>
                     </div>
                 </div>
 
             </div>
         </div>
-
 
     </body>
 </html>
